# miniagent

./: .gitignore  Cargo.toml  LICENSE-APACHE  LICENSE-MIT  README.md
.github/workflows/: release.yml
config/: config-example.yaml  mcp.json  system_prompt.md
skills/demo/: SKILL.md  reference.md
skills/demo/scripts/: hello.py
src/: agent.rs  config.rs  lib.rs  llm.rs  logger.rs  main.rs  observer.rs  token.rs
src/cli/: mcp.rs  mod.rs  repl.rs  run.rs  skills.rs  tools.rs  userconfig.rs
src/tools/: base.rs  bash.rs  file.rs  mcp.rs  mod.rs  note.rs  skills.rs
