[package]
name = "miniagent"
version = "0.1.0"
edition = "2024"
license = "MIT OR Apache-2.0"
authors = ["Mingzhen Zhuang <superfrankie621@gmail.com>"]
repository = "https://github.com/Latias94/miniagent"
homepage = "https://github.com/Latias94/miniagent"

[dependencies]
anyhow = "1"
thiserror = "2"
tokio = { version = "1", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = [
    "env-filter",
    "fmt",
    "std",
] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
dirs = "6"
clap = { version = "4", features = ["derive"] }
colored = "3"
async-trait = "0.1"
which = "8"

# LLM client
siumai = { version = "0.11.0-beta.2", features = [
    "anthropic",
    "openai",
    "minimaxi",
    "google",
], default-features = true }

# MCP client SDK
rmcp = { version = "0.8.5", features = ["client", "transport-child-process"] }

# Utility for reading files
tokio-util = { version = "0.7", features = ["codec"] }
walkdir = "2"
regex = "1"
chrono = { version = "0.4", features = ["clock", "std"] }
rustyline = "17"
once_cell = "1"
include_dir = "0.7"

[features]
# Default features include accurate tokenization and embedding skills into the binary
default = ["tiktoken", "embed-skills"]
# Enable accurate tokenization with OpenAI tiktoken (cl100k_base)
# To use: cargo run --features tiktoken
tiktoken = ["dep:tiktoken-rs"]
# Embed the entire skills/ directory into the binary and extract on first run
embed-skills = []

[target.'cfg(not(any()))'.dependencies]
# Placeholders for optional crates guarded by features (avoid accidental compile)

[dependencies.tiktoken-rs]
version = "0.7"
optional = true

[dev-dependencies]
anyhow = "1"

uuid = { version = "1", features = ["v4"] }
